Fix a bug with overlay hiding animation on IE and Edge

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -30,10 +30,6 @@
   align-items: center;
   transition: transform 1s;
 
-  @media screen and (min-width: $display-aside-breakpoint) {
-    transform-origin: calc(50% - #{$overlay-transform-offset});
-  }
-
   &_exiting {
     transform: scaleX(0);
   }
